--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@stackframe/stack": "^2.8.52",
     "daisyui": "^5.5.5",
     "next": "16.0.4",
+    "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
